[package]
name = "pwapwdb"
version = "0.1.0"
authors = ["Tim Kuhlman <tim@backgroundprocess.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
pwdb = { path = "../pwdb" }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.1"
uuid = { version = "0.8", features = ["v4", "wasm-bindgen"] }
wasm-bindgen = "0.2"
yew = "0.17"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Document',
    'Element',
    'HtmlCollection',
    'HtmlElement',
    'Node',
    'Window',
]