[package]
name = "pwdb"
version = "0.1.0"
authors = ["Tim Kuhlman <tim@backgroundprocess.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block-modes = "0.6"
chrono = "0.4"
generic-array = "0.14"
hmac = "0.9"
sha2 = "0.9"
twofish = "0.4"
uuid = { version = "0.8", features = ["v4"] }